# dynamodb-manager

./: README.md  go.mod  go.sum  main.go  main_test.go
client/: BUILD.bazel  client.go  client_test.go  go.mod  go.sum
dynamodb/: BUILD.bazel  main.go
dynamodb/client/: BUILD.bazel
dynamodb/search/: BUILD.bazel
dynamodb/update/: BUILD.bazel  update.go
logging/: go.mod  logging.go
search/: go.mod  go.sum  search.go  search_test.go
update/: go.mod  go.sum  update.go  update_test.go
