load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "update",
    srcs = ["update.go"],
    importpath = "github.com/ForrestIsARealGoodman/dynamodb/update",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_test(
    name = "updatetest",
    srcs = ["update_test.go"],
    embed = [":update"],
    deps = ["@com_github_stretchr_testify//require"],
)

go_test(
    name = "update_test",
    srcs = ["update_test.go"],
    embed = [":update"],
    deps = ["@com_github_stretchr_testify//require"],
)
